0024172: Compiler warnings 'unreacheable code' and 'unreferenced local function' in OCAF

Files _Sample.cxx containing unused sample code are removed from several OCAF packages.
Cycles for() with body always ending with 'break' are replaced by equivalent if() statements.